# OpenGLZero

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  Platform.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  main.cpp
